--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,11 @@
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-size: 62.5%;
   font-family: 'Titillium Web', sans-serif;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 a {
@@ -15,15 +18,99 @@ ul {
   list-style: none;
 }
 
+.header-bg-1 {
+  background-color: #ffffff !important;
+}
+
+.navbar-bg-1 {
+  background-color: #ffffff !important;
+}
+
+.header-bg-2 {
+  background-color: #00171f !important;
+}
+
+.navbar-bg-2 {
+  background-color: #00171f !important;
+}
+
+.header-bg-3 {
+  background-color: #003459 !important;
+}
+
+.navbar-bg-3 {
+  background-color: #003459 !important;
+}
+
+.header-bg-4 {
+  background-color: #007ea7 !important;
+}
+
+.navbar-bg-4 {
+  background-color: #007ea7 !important;
+}
+
+.header-bg-5 {
+  background-color: #00a8e8 !important;
+}
+
+.navbar-bg-5 {
+  background-color: #00a8e8 !important;
+}
+
+.header-bg-6 {
+  background-color: #07090f !important;
+}
+
+.navbar-bg-6 {
+  background-color: #07090f !important;
+}
+
+.header-bg-7 {
+  background-color: #e8e8e9 !important;
+}
+
+.navbar-bg-7 {
+  background-color: #e8e8e9 !important;
+}
+
+.header-bg-8 {
+  background-color: #03101c !important;
+}
+
+.navbar-bg-8 {
+  background-color: #03101c !important;
+}
+
+.header-bg-9 {
+  background-color: #c18a00 !important;
+}
+
+.navbar-bg-9 {
+  background-color: #c18a00 !important;
+}
+
+.header-bg-10 {
+  background-color: #1a434c !important;
+}
+
+.navbar-bg-10 {
+  background-color: #1a434c !important;
+}
+
+.header {
+  -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
+}
+
 .navbar {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   height: 60px;
-  padding: 10px;
-  background-color: #09804e;
-  width: 100%;
+  padding: 0 10px;
+  max-width: 1440px;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -32,11 +119,10 @@ ul {
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-  -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
+  margin: auto;
+}
+.navbar-brand {
+  margin-right: 25px;
 }
 .navbar-brand img {
   width: 170px;
@@ -51,10 +137,6 @@ ul {
   -webkit-justify-content: flex-end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
   height: 100%;
   -webkit-box-align: center;
   -webkit-align-items: center;
@@ -72,11 +154,54 @@ ul {
   font-weight: 400;
   text-transform: uppercase;
   margin-right: 10px;
-  border-radius: 2px;
   height: 100%;
-  line-height: 1.25;
+  line-height: 2.5;
   letter-spacing: 1px;
 }
 .navbar-link:hover {
   background-color: #0ec77a;
+}
+
+.drop-menu {
+  margin-right: 25px;
+}
+.drop-menu > a {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.drop-menu .bt-menu .fa-bars {
+  font-size: 30px;
+  color: white;
+}
+.drop-menu .text {
+  font-size: 15px;
+  color: white;
+}
+.drop-menu .fa-caret-down {
+  margin-left: 5px;
+}
+
+.search-bar {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  padding: 0 10px;
+}
+.search-bar-input {
+  width: 75%;
+  display: block;
+  padding: 5px;
+  border: none;
 }
